los proveedores no ven los productos liked ni el carro , si no hay nuevos productos aparece los que mas tienen like

--- a/templates/base/navbar1.html
+++ b/templates/base/navbar1.html
@@ -113,7 +113,7 @@
           <ion-icon name="home-outline"></ion-icon>
       </a>
       
-     
+     {% if  request.user.usuario.rol.nombre == "cliente" %}
       <a class="action-btn" href="{% url 'carro:ver_carro' %}">
         <ion-icon name="bag-handle-outline"></ion-icon>
         <span id="cart-count2" class="count">{{ request.session.carro|length }} </span>
@@ -124,6 +124,7 @@
         <span id="like-count" class="count">{{ cantidad_like }}</span>
       </a>
 
+      {% endif %}
       {% endif %}
       
 
