--- a/templates/products/productosMinimal.html
+++ b/templates/products/productosMinimal.html
@@ -18,7 +18,7 @@
         <div class="showcase-wrapper  has-scrollbar ">
 
           <div class="showcase-container">
-       {% for product in new_products|slice:":5" %}
+       {% for product in new_products %}
             <div class="showcase">
 
               <a href="{% url 'products:detail' product.handle %}" class="showcase-img-box">
@@ -61,52 +61,7 @@
 
           </div>
 
-{#          <div class="showcase-container">#}
-{#          {% if new_products.count > 5 %}#}
-{#              {% for product in new_products|slice:"5:10" %}#}
-{##}
-{#            <div class="showcase">#}
-{##}
-{#              <a href="{% url 'products:detail' product.handle %}" class="showcase-img-box">#}
-{#                <img src="{{ product.image.url }}" alt="{{ product.image.url }}" width="70" class="showcase-img">#}
-{#              </a>#}
-{##}
-{#              <div class="showcase-content">#}
-{##}
-{#                <a href="{% url 'products:detail' product.handle %}">#}
-{#                  <h4 class="showcase-title">{{ product.name}}</h4>#}
-{#                </a>#}
-{#                {% if product.clasificacion.all %}#}
-{##}
-{#              {% for clasi in product.clasificacion.all|slice:":1" %}#}
-{##}
-{#                <a href="{% url 'products:list' %}?classification_id={{ clasi.id }}" class="showcase-category">{{ clasi.nombre }}</a>#}
-{#                    {% endfor %}#}
-{#                    {% else %}#}
-{#                     {% if product.clasificacion_padre.all %}#}
-{#                             {% for clasi_pa in product.clasificaciones_padre.all|slice:":1" %}#}
-{#                     <a href="{% url 'products:list' %}?classification_id_padre={{ clasi_pa.id }}" class="showcase-category">{{ clasi_pa.nombre }}</a>#}
-{#                         {% endfor %}#}
-{#                         {% endif %}#}
-{#                  {% endif %}#}
-{##}
-{##}
-{#                <div class="price-box">#}
-{##}
-{#                  <p class="price">${{ product.price }}</p>#}
-{#    {% if product.offer %}#}
-{#                  <del>${{ product.offer.precio_viejo }}</del>#}
-{#                     {% endif %}#}
-{#                </div>#}
-{##}
-{#              </div>#}
-{##}
-{#            </div>#}
-{##}
-{#{% endfor %}#}
-{#              {% endif %}#}
-{##}
-{#          </div>#}
+
 
         </div>
 
@@ -121,7 +76,7 @@
 
           <div class="showcase-container">
 
-            {% for product in trending_products|slice:":5" %}
+            {% for product in trending_products %}
 
             <div class="showcase">
 
@@ -182,7 +137,7 @@
 
           <div class="showcase-container">
 
-              {% for product in top_rated|slice:":5" %}
+              {% for product in top_rated %}
 
             <div class="showcase">
 
