--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -14,7 +14,7 @@
 
 
 {% if classifications %}
-{% include 'products/category.html' with classifications=classifications %}
+{% include 'products/category2.html' with classifications=classifications %}
     {% endif %}
 
 {% if classifications %}
