--- a/templates/usuario/login.html
+++ b/templates/usuario/login.html
@@ -260,28 +260,28 @@
 
 
 
-      <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"></script>
-
-
-        <script src="https://www.google.com/recaptcha/api.js?render={{ site_key }}"></script>
-        <script>
-
-          grecaptcha.ready(function() {
-
-              $('#login').submit(function(e){
-                  var form = this;
-
-                  e.preventDefault()
-                  grecaptcha.execute('{{ site_key }}', {action: 'login'}).then(function(token) {
-
-                      $('#recaptcha').val(token)
-
-                      form.submit()
-                  });
-              })
-
-          });
-         </script>
-
+{#      <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="#}
+{#  crossorigin="anonymous"></script>#}
+{##}
+{##}
+{#        <script src="https://www.google.com/recaptcha/api.js?render={{ site_key }}"></script>#}
+{#        <script>#}
+{##}
+{#          grecaptcha.ready(function() {#}
+{##}
+{#              $('#login').submit(function(e){#}
+{#                  var form = this;#}
+{##}
+{#                  e.preventDefault()#}
+{#                  grecaptcha.execute('{{ site_key }}', {action: 'login'}).then(function(token) {#}
+{##}
+{#                      $('#recaptcha').val(token)#}
+{##}
+{#                      form.submit()#}
+{#                  });#}
+{#              })#}
+{##}
+{#          });#}
+{#         </script>#}
+{##}
 {%endblock%}
