--- a/templates/purchases/solicitud/filtrar_solicitudes_stripe.html
+++ b/templates/purchases/solicitud/filtrar_solicitudes_stripe.html
@@ -1,15 +1,15 @@
-<div class="bg-gray-100 p-4 rounded-md mb-4">
-  <h2 class="text-lg font-bold mb-2">Filtrar Pedidos</h2>
+<div>
+  <h2>Filtrar Pedidos</h2>
   <form method="GET" action="{% url 'pedidos_stripe:purchases_stripe' %}">
       {% if request.user.usuario.rol.nombre == 'admin' %}
-    <div class="flex items-center mb-2">
-      <label for="usuario" class="mr-2">Usuario:</label>
-      <input type="text" id="usuario" name="usuario" class="border border-gray-300 rounded-md px-2 py-1 flex-1">
+    <div>
+      <label for="usuario">Usuario:</label>
+      <input type="text" id="usuario" name="usuario">
     </div>
       {% endif %}
-    <div class="flex items-center mb-2">
-      <label for="estado" class="mr-2">Estado:</label>
-      <select id="estado" name="estado" class="border border-gray-300 rounded-md px-2 py-1 flex-1">
+    <div>
+      <label for="estado">Estado:</label>
+      <select id="estado" name="estado">
         <option value="">Todos</option>
         <option value="pending">En espera</option>
         <option value="accepted">Aceptada</option>
@@ -17,18 +17,17 @@
       </select>
     </div>
 
-   <div class="flex items-center mb-2">
-      <label for="completado" class="mr-2">Completado:</label>
-      <select id="completado" name="completado" class="border border-gray-300 rounded-md px-2 py-1 flex-1">
+    <div>
+      <label for="completado">Completado:</label>
+      <select id="completado" name="completado">
         <option value="">Todos</option>
         <option value="true">Sí</option>
         <option value="false">No</option>
       </select>
     </div>
 
-
-    <div class="flex justify-end">
-      <button type="submit" class="bg-gray-900 hover:bg-blue-600 text-white px-4 py-2 rounded-md">Filtrar</button>
+    <div style="margin-bottom: 12px;"> <!-- Espacio adicional arriba del botón -->
+      <button type="submit" style="background-color: #3498db; color: white; padding: 8px 16px; border: none; border-radius: 4px; cursor: pointer; transition: background-color 0.3s; font-size: 1rem;">Filtrar</button>
     </div>
   </form>
 </div>
