category imagenes ok

--- a/templates/products/category.html
+++ b/templates/products/category.html
@@ -1,6 +1,20 @@
    <!--
       - CATEGORY
     -->
+   <style>
+     .category-img-box.has-image {
+        background-size: cover;
+        background-position: center;
+        background-image: url('{{ clasification.image.url }}');
+    }
+
+    .category-img-box.no-image {
+        background-color: #f0f0f0;
+    }
+   </style>
+
+
+
 
     <div class="category">
 
@@ -13,26 +27,24 @@
 {% if clasification.productos_padre.count > 0  %}
             <div class="category-item">
 
-              <div class="category-img-box">
-                  <a href="{% url 'products:list' %}?classification_id_padre={{ clasification.id }}">
-                      {% if clasification.image %}
-                <img src="{{ clasification.image.url }}" alt="{{ clasification.nombre }}" width="30">
-                          {% endif %}
-                  </a>
-              </div>
-
+              <div class="category-img-box {% if clasification.image %} has-image {% else %} no-image {% endif %}" style="width: 100%; height: 100%;">
+                <a href="{% url 'products:list' %}?classification_id_padre={{ clasification.id }}" style="display: block; width: 100%; height: 100%;"></a>
+            </div>
+            
+            
+            
+       
               <div class="category-content-box">
 
                 <div class="category-content-flex">
-                  <h3 class="category-item-title">{{ clasification.nombre }}</h3>
+                  <h3 class="category-item-title" >{{ clasification.nombre }}</h3>
 
                     {% with product_count=clasification.productos_padre.count %}
                   <p class="category-item-amount">{{ product_count }}</p>
                         {% endwith %}
                 </div>
 
-                <a href="#" class="category-btn">Show all</a>
-
+              
               </div>
 
             </div>
